<resources>
    <!--保定市建设稽查大队OA系统-->
    <string name="app_name">保定市建设稽查大队OA系统</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">发布日志</string>
    <string name="title_notifications">工作动态</string>
    <string name="title_myaccount">我的账号</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zaigang">在岗</string>
    <string name="zhangmoumou">张某某</string>
    <string name="xiangqing">详情</string>
    <string name="text_long">\t\t\t\t为进一步贯彻落实《北京市控制吸烟条例》，营造良好的乘车环境，展示首都“窗口”形象 ，保护乘客和驾驶员身体健康，北京市爱国卫生委员会、北京市交通委员会 、北京市交通委运输管理局和北京市交通执法总队1日已联合下发通知，开展出租汽车控烟工作， 提倡社会公德，减少吸烟造成的危害，促进出租汽车行业文明服务水平不断提高。</string>
    <string name="text_long2">党的十八大以来，以习近平同志为核心的党中央高度重视民族精神的历史传承和创新发展。他曾在不同场合多次提到屈原，赞叹其心忧家国、情牵百姓、勇于探索、清正高洁的人格魅力和思想精髓，并几度引用屈原诗歌中的名句来阐述思想，寄情言志。</string>
    <string name="shanchu">删除</string>
    <string name="edit">编辑</string>
    <string name="zhangnan">张楠</string>
    <string name="shichangdiaochayuan">市场调查员</string>
    <string name="datetest2">2017-05-17</string>
    <string name="transactionRemind">事务提醒</string>
    <string name="notAvailable">暂无提醒</string>
    <string name="saveLog">保存</string>
    <string name="commitLog">提交</string>
    <string name="todayDate">今日：2017年5月15日 星期一</string>
    <string name="work">工作</string>
    <string name="datetest">2017.05.17</string>
    <string name="datetest_">2017-05-17      星期一</string>
    <string name="text_monday">星期一</string>
    <string name="change_pwd">更改密码</string>
    <string name="change_phonenum">更改手机号</string>
    <string name="change_truename">修改真实姓名</string>
    <string name="kefu_num">客服电话</string>
    <string name="version_update">版本更新</string>
    <string name="exitlogin">退出登录</string>
    <string name="creator">创建者：</string>
    <string name="gw_bianhao">公文编号：</string>
    <string name="gw_title">公文主题：</string>
    <string name="bmfzr">部门负责\n人意见</string>
    <string name="gwOpin">公文意见</string>
    <string name="opinChuli">处理意见</string>
    <string name="opinLeader">领导批示</string>
</resources>
