<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/forty"
    android:orientation="horizontal"
    android:padding="@dimen/padding_lsmall_10">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/text_size_small_14"
        tools:text="@string/datetest" />

    <TextView
        android:id="@+id/tvWorkState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/text_size_small_14"
        tools:text="@string/zaigang" />

    <TextView
        android:id="@+id/tvMan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/text_size_small_14"
        tools:text="@string/zhangmoumou" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/detail" />


        <ImageView
            android:id="@+id/btEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_lsmall_10"
            android:layout_weight="1"
            android:src="@mipmap/edit" />

        <ImageView
            android:id="@+id/btDelete"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_lsmall_10"
            android:layout_weight="1"
            android:src="@mipmap/delete" />

    </LinearLayout>

</LinearLayout>